# sweet

./: Cargo.toml  README.md  build.rs  flake.nix  hotkeys.swhkd  template.pest
modules/: other.swhkd
src/: bindings.rs  definition.rs  evdev_mappings.rs  lib.rs  main.rs  range.rs  token.rs
tests/: tests.rs
