[package]
name = "sweet"
description = "simple wayland event encoding text"
version = "0.3.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bitflags = "2.5.0"
evdev = "0.12.2"
itertools = "0.12.1"
pest = "2.7.7"
pest_derive = "2.7.7"
thiserror = "1.0.59"

[dev-dependencies]
tempfile = "3.10.1"
